--- a/index.html
+++ b/index.html
@@ -305,7 +305,13 @@
               <br>
               שאלות?
             </p>
-            <a href="http://forum.hasadna.org.il/c/5-category/22-category" target="_blank" class="btn btn-default btn-lg">הצטרפו אל קהילת המתנדבים שלנו</a>
+			
+			<p><input id="inputSearch" placeholder="נסו לשאול..." />
+			
+			<ul id="results">
+			</ul>
+			
+            <!--<a href="http://forum.hasadna.org.il/c/5-category/22-category" target="_blank" class="btn btn-default btn-lg">הצטרפו אל קהילת המתנדבים שלנו</a> -->
           </div>
         </div>
       </div>
@@ -335,6 +341,10 @@
     <script src="js/lodash.js"></script>
     <script src="js/grayscale.js"></script>
 
-</body>
+	<!-- fuse.js search -->
+	<script src="js/fuse.min.js"></script>
+	<script src="js/fusesearch.js"></script>
+	
+	</body>
 
 </html>
