add "contact us" button to the "how to open"

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
                     </p>
                     <a href="#" target="_blank" class="btn btn-default btn-lg">איך מגישים התנגדות?</a>
-
+                    <br><br><br>
                         <div class="panel-group" id="accordion">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -272,11 +272,17 @@
                 <h2>מי אנחנו?</h2>
                 <p>
                   תב"ע פתוחה מגישה ממשק נוח לאיתור תוכניות תב"ע ברשות מקומית, ומשם להגיע לפרטי התוכנית באתר רשות המקרקעין.
-                  תב"ע פתוחה היא פרויקט של הסדנא לידע ציבורי שמובל על ידי יאיר אסף-שפירא וניר יריב. כל הקוד באתר פתוח לציבור. גם את ואתה יכולים לתרום, בצד השרת או הממשק, במשוב משתמש ובידע תכנוני. צרו איתנו קשר.  תרמו ופעלו במסגרת הפרויקט: יובל אדמון, גילעד גולדברג, פינחס ליכטמן, מעין אלכסנדר, אלון ניסר, מור יריב, שחר עברון, ניר וייסמן, גיזרה, אביב גונן, יוגב שרביט, נעם קסטל, שירה מזור, אג'אר, בת-אל [???]
+                  תב"ע פתוחה היא פרויקט של הסדנא לידע ציבורי שמובל על ידי יאיר אסף-שפירא וניר יריב.
+                </p>
+                <p>
+                כל הקוד באתר פתוח לציבור. גם את ואתה יכולים לתרום, בצד השרת או הממשק, במשוב משתמש ובידע תכנוני. 
+                </p>
+                <p>
+                  צרו איתנו קשר.  תרמו ופעלו במסגרת הפרויקט: יובל אדמון, גילעד גולדברג, פינחס ליכטמן, מעין אלכסנדר, אלון ניסר, מור יריב, שחר עברון, ניר וייסמן, גיזרה, אביב גונן, יוגב שרביט, נעם קסטל, שירה מזור, אג'אר.
                   Israel icon by Vincens von Bibra
                 </p>
 
-
+                <a href="http://forum.hasadna.org.il/c/5-category/22-category" target="_blank" class="btn btn-default btn-lg">כתבו לקהילת מתנדבים שלנו</a>                
 
                 <!-- <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
                 </p>
