fix accordion aligment

--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
 
                     </p>
                     <a href="#" target="_blank" class="btn btn-default btn-lg">איך מגישים התנגדות?</a>
+
                     <br><br><br>
-                        <div class="panel-group" id="accordion">
+                        <div class="panel-group text-right" id="accordion">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
@@ -246,7 +247,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
-                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">3. נספחים</a>
+                                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">נספחים</a>
                                     </h4>
                                 </div>
                                 <div id="collapseThree" class="panel-collapse collapse">
