textual and line breaks

--- a/index.html
+++ b/index.html
@@ -190,7 +190,12 @@
                   תב"ע, תכנית בניין עיר, היא מסמך חוקי שנערך על-ידי מתכנן, עובר תהליך אישור והופך למעשה, לאחר אישורו, לחוק הקובע מה מותר לעשות בתחום התכנון והבנייה בשטח המדובר.
                   נתוני התב"ע מפוזרים באתרים שונים,
                   כמו <a href="http://www.land.gov.il/iturtabot/taba1.asp" target="_blank"> מנהל מקרקעי ישראל </a>
-                  או אתרי עיריות. מטרת תב"ע פתוחה היא לכל אזרחית ואזרח, גם אלה שאינם עוסקים ומכירים את תחומי התכנון העירוני, לגשת, לעקוב ולהשפיע על סביבת חייהם.
+                  או אתרי עיריות ורשויות מקומיות. 
+                </p>
+                <br>
+                <p>
+                מטרת תב"ע פתוחה היא לכל אזרחית ואזרח, גם אלה שאינם עוסקים ומכירים את תחומי התכנון העירוני, לגשת, לעקוב ולהשפיע על סביבת חייהם.
+                </p>
                 <br>רוצים לעזור?
                 </p>
                 <a href="http://forum.hasadna.org.il/c/5-category/22-category" target="_blank" class="btn btn-default btn-lg">כתבו לקהילת מתנדבים שלנו</a>
@@ -213,9 +218,12 @@
                       <a href="http://www.moin.gov.il/Subjects/Regulation2006/Pages/default.aspx" target="_blank">
                         נוהל מבא"ת
                       </a>
-                      (מבנה אחיד לתכניות). לאחר שתראו תכנית או שתיים הערוכות לפי נוהל זה, תצליחו להבין די מהר תכניות נוספות.
-
+                      (מבנה אחיד לתכניות). 
                     </p>
+                    <p>
+                    לאחר שתראו תכנית או שתיים הערוכות לפי נוהל זה, תצליחו להבין די מהר תכניות נוספות.
+                    </p>
+                    
                     <a href="#" target="_blank" class="btn btn-default btn-lg">איך מגישים התנגדות?</a>
 
                     <br><br><br>
@@ -303,7 +311,7 @@
                 כל הקוד באתר פתוח לציבור. גם את ואתה יכולים לתרום, בצד השרת או הממשק, במשוב משתמש ובידע תכנוני. 
                 </p>
                 <p>
-                  צרו איתנו קשר.  תרמו ופעלו במסגרת הפרויקט: יובל אדמון, גילעד גולדברג, פינחס ליכטמן, מעין אלכסנדר, אלון ניסר, מור יריב, שחר עברון, ניר וייסמן, גיזרה, אביב גונן, יוגב שרביט, נעם קסטל, שירה מזור, אג'אר.
+                  תרמו ופעלו במסגרת הפרויקט: יובל אדמון, גילעד גולדברג, פינחס ליכטמן, מעין אלכסנדר, אלון ניסר, מור יריב, שחר עברון, ניר וייסמן, גיזרה, אביב גונן, יוגב שרביט, נעם קסטל, שירה מזור, אג'אר.
                   Israel icon by Vincens von Bibra
                 </p>
 
