--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
                 </p>
                 <a href="http://forum.hasadna.org.il/c/5-category/22-category" target="_blank" class="btn btn-default btn-lg">כתבו לקהילת מתנדבים שלנו</a>
             </div>
+            <a href="#why" class="btn btn-circle page-scroll">
+            	<i class="fa fa-angle-double-down animated"></i>
+            </a>
         </div>
     </section>
 
