add "next" to "why" section

--- a/index.html
+++ b/index.html
@@ -274,6 +274,9 @@
 
                 </div>
             </div>
+            <a href="#how" class="btn btn-circle page-scroll">
+            	<i class="fa fa-angle-double-down animated"></i>
+            </a>
         </div>
     </section>
 
