fixes on index.html

--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
                     <li>
                         <a class="page-scroll" href="#who">?מי אנחנו</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#how">?איך פותחים</a>
+                        <a class="page-scroll" href="#how">?רוצים גם</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#why">?למה זה חשוב</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#what">?מה זה תב״ע</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#page-top">תב"ע פתוחה</a>
                     </li>
                 </ul>
             </div>
@@ -75,12 +75,13 @@
     </nav>
 
     <!-- Intro Header -->
-    <header class="intro">
+    <header class="intro" id="main">
         <div class="intro-body">
+            <br><br>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">תב"ע פתוחה</h1>
+                
                         <!-- <p class="intro-text">בשכונה שלנו</p> -->
                     <div id="muni-list">
                          <!--  <div class="muni">
@@ -200,9 +201,7 @@
                 </p>
                 <a href="http://forum.hasadna.org.il/c/5-category/22-category" target="_blank" class="btn btn-default btn-lg">כתבו לקהילת מתנדבים שלנו</a>
             </div>
-            <a href="#why" class="btn btn-circle page-scroll">
-            	<i class="fa fa-angle-double-down animated"></i>
-            </a>
+
         </div>
     </section>
 
@@ -227,7 +226,7 @@
                     לאחר שתראו תכנית או שתיים הערוכות לפי נוהל זה, תצליחו להבין די מהר תכניות נוספות.
                     </p>
                     
-                    <a href="#" target="_blank" class="btn btn-default btn-lg">איך מגישים התנגדות?</a>
+                    <a href="https://docs.google.com/document/d/1pRF3hWiYPOGki-wGGg-M-iib7e_zv0fQHRz2F1bqWI4/edit?usp=sharing" target="_blank" class="btn btn-default btn-lg">איך מגישים התנגדות?</a>
 
                     <br><br><br>
                         <div class="panel-group text-right" id="accordion">
@@ -274,9 +273,6 @@
 
                 </div>
 
-	            <a href="#how" class="btn btn-circle page-scroll">
-        	    	<i class="fa fa-angle-double-down animated"></i>
-            		</a>
     		</div>
         </div>
     </section>
@@ -286,7 +282,7 @@
       <div class="how-section">
         <div class="row sect">
           <div class="col-lg-8 col-lg-offset-2">
-            <h2>איך לפתוח אתר תב״ע פתוחה ברשות המקומית שלי?</h2>
+            <h2>רוצה אתר תב״ע פתוחה גם ברשות המקומית שלך?</h2>
             <p>
               המערכת שלנו פשוטה ומוכנה להתקנה. נשמח להיפגש עם נציגי הרשות שלכם על מנת להדגים ולסייע בהתקנתה בחינם כשרות לתושב. כל הנדרש, מצד הרשות, הוא קובץ גוש-חלקה, שיאפשר למערכת לתרגם עבור את התושבים את המידע הכלול בתכניות התב"ע לאזור הרלוונטי במפה.
               <br>
@@ -316,8 +312,6 @@
                 </p>
                 <p>
                 כל הקוד באתר פתוח לציבור. גם את ואתה יכולים לתרום, בצד השרת או הממשק, במשוב משתמש ובידע תכנוני. 
-                </p>
-                <p>
                   תרמו ופעלו במסגרת הפרויקט: יובל אדמון, גילעד גולדברג, פינחס ליכטמן, מעין אלכסנדר, אלון ניסר, מור יריב, שחר עברון, ניר וייסמן, גיזרה, אביב גונן, יוגב שרביט, נעם קסטל, שירה מזור, אג'אר.
                   Israel icon by Vincens von Bibra
                 </p>
